--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2174,11 +2174,12 @@ Please check I have understood the intended command here*/
 "signup_password_rule_character_limit" = "Minimum 6, maximum 16 caractères";
 "signup_password_rule_upper_lower_numeric" = "Au moins 1 lettre majuscule, 1 lettre minuscule et 1 chiffre";
 "signup_password_rule_sequential_characters" = "caractères non consécutifs";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "E-mail de récupération";
+"profile_recovery_mail_desc" = "E-mail de récupération est utilisé pour vérifier lorsque vous oubliez votre mot de passe";
+"profile_recovery_mail_hint" = "Aucun e-mail de récupération saisi pour le moment";
+"profile_mail_verified" = "Vérifié";
+"profile_verify" = "Vérifiez";
+"masterpass_quota_package_cancel" = "Pour annuler votre paquet, veuillez visiter www.mylifebox.com";
+"profile_recovery_email_empty" = "E-mail de récupération est vide";
+"profile_recovery_email_invalid" = "E-mail de récupération n'est pas valide";
+"package_period_x_months" = "";
