--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1866,11 +1866,12 @@
 "signup_password_rule_character_limit" = "Minim 6, maxim 16 caractere";
 "signup_password_rule_upper_lower_numeric" = "Minim 1 majusculă, 1 litere mică și 1 număr";
 "signup_password_rule_sequential_characters" = "Caractere non-consecutive";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "E-mail de Recuperare";
+"profile_recovery_mail_desc" = "E-mailul de recuperare este utilizat pentru confirmare când îţi uiţi parola";
+"profile_recovery_mail_hint" = "Nu a fost introdus încă un e-mail de recuperare";
+"profile_mail_verified" = "Confirmat";
+"profile_verify" = "Confirmă";
+"masterpass_quota_package_cancel" = "Pentru a-ţi anula pachetul, te rugăm să vizitezi www.mylifebox.com";
+"profile_recovery_email_empty" = "E-mailul de recuperare este gol";
+"profile_recovery_email_invalid" = "E-mailul de recuperare nu este valid";
+"package_period_x_months" = "";
