--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1909,11 +1909,12 @@
 "signup_password_rule_character_limit" = "Minimumi 6, maksimumi 16 karaktere";
 "signup_password_rule_upper_lower_numeric" = "Së paku 1 shkronjë e madhe, 1 shkronjë e vogël dhe 1 numër";
 "signup_password_rule_sequential_characters" = "shkronja jo të njëpasnjëshëm";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Email -i i rikuperimit";
+"profile_recovery_mail_desc" = "Email -i i rikuperimit përdoret për të konfirmuar fjalëkalimin tuaj kur e harroni.";
+"profile_recovery_mail_hint" = "Ende, Email -i i rikuperimit nuk është futur.";
+"profile_mail_verified" = "i/e konfirmuar";
+"profile_verify" = "Konfirmo";
+"masterpass_quota_package_cancel" = "Për të anuluar paketën tuaj, ju lutemi, vizitoni www.mylifebox.com -in";
+"profile_recovery_email_empty" = "Email -i i rikuperimit është bosh";
+"profile_recovery_email_invalid" = "Email -i i rikuperimit është i pavlefshëm";
+"package_period_x_months" = "";
