--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1868,11 +1868,12 @@
 "signup_password_rule_character_limit" = "Мінімум 6, максимум 16 символів";
 "signup_password_rule_upper_lower_numeric" = "Мінімум 1 прописна буква, 1 мала літера і 1 цифра";
 "signup_password_rule_sequential_characters" = "Непослідовні символи";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Резервна електронна пошта";
+"profile_recovery_mail_desc" = "Резервний адреса електронної пошти використовується для підтвердження, якщо ви забули свій пароль.";
+"profile_recovery_mail_hint" = "Резервний адреса електронної пошти ще не введений";
+"profile_mail_verified" = "Підтверджено";
+"profile_verify" = "Підтвердь";
+"masterpass_quota_package_cancel" = "Щоб скасувати пакет, відвідайте www.mylifebox.com";
+"profile_recovery_email_empty" = "Електронна адреса для відновлення порожній";
+"profile_recovery_email_invalid" = "Резервний адреса електронної пошти недійсний";
+"package_period_x_months" = "";
