--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1886,4 +1886,23 @@
 "masterpass_quota_package_cancel" = "لإلغاء الباقة الخاصة بك، يرجى زيارة موقع\nwww.mylifebox.com";
 "profile_recovery_email_empty" = "البريد الإلكتروني لاسترداد الحساب فارغ";
 "profile_recovery_email_invalid" = "البريد الإلكتروني لاسترداد الحساب غير صالح";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d أشهر";
+"invitation_share_message" = "أدعوك إلى لايف بوكسLifeebox ، قم بتسجيل اسمك وابدأ في استخدام مساحة تخزين 5 جيجا بايت. وكذلك قم بدعوة شخص آخر واكسب المزيد!";
+"profile_recovery_email_is_same_with_account_email" = "لا يمكن أن يكون البريد الإلكتروني للاسترداد والبريد الإلكتروني للملف الشخصي متماثلين.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "لإلغاء الباقة الخاصة بك، يرجى زيارة موقع\nwww.mylifebox.com";
