--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1874,4 +1874,23 @@
 "masterpass_quota_package_cancel" = "Um Ihr Paket zu stornieren, besuchen Sie bitte www.mylifebox.com";
 "profile_recovery_email_empty" = "Wiederherstellungs-E-Mail ist leer";
 "profile_recovery_email_invalid" = "Wiederherstellungs-E-Mail ist ungültig";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d monate";
+"invitation_share_message" = "Ich lade Sie zu lifebox ein, registrieren Sie sich und nutzen Sie den 5 GB Speicherplatz.";
+"profile_recovery_email_is_same_with_account_email" = "Die Wiederherstellungs-E-Mail und die Profil-E-Mail können nicht identisch sein.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Um Ihr Paket zu stornieren, besuchen Sie bitte www.mylifebox.com";
