--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1916,4 +1916,23 @@
 "masterpass_quota_package_cancel" = "Para cancelar su paquete, visite www.mylifebox.com";
 "profile_recovery_email_empty" = "El correo electrónico de recuperación está vacío";
 "profile_recovery_email_invalid" = "El correo de recuperación no es válido";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d meses";
+"invitation_share_message" = "Te invito a lifebox, regístrate y comienza a usar 5GB de almacenamiento.";
+"profile_recovery_email_is_same_with_account_email" = "El correo electrónico de recuperación y el correo electrónico del perfil no pueden ser iguales.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Para cancelar su paquete, visite www.mylifebox.com";
