--- a/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/sq.lproj/OurLocalizable.strings
@@ -1917,4 +1917,23 @@
 "masterpass_quota_package_cancel" = "Për të anuluar paketën tuaj, ju lutemi, vizitoni www.mylifebox.com -in";
 "profile_recovery_email_empty" = "Email -i i rikuperimit është bosh";
 "profile_recovery_email_invalid" = "Email -i i rikuperimit është i pavlefshëm";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d muaj";
+"invitation_share_message" = "Ju ftoj edhe juve në lifebox, regjistrohuni dhe filloni të përdorni hapësirë ruajtëse prej 5 GB.";
+"profile_recovery_email_is_same_with_account_email" = "Emaili i rikuperimit dhe e-maili i profilit nuk mund të jenë të njëjta.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Për të anuluar paketën tuaj, ju lutemi, vizitoni www.mylifebox.com -in";
