--- a/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/tr.lproj/OurLocalizable.strings
@@ -1893,3 +1893,22 @@
 "profile_recovery_email_empty" = "Kurtarma e-postası boş";
 "profile_recovery_email_invalid" = "Kurtarma e-postası geçersiz";
 "package_period_x_months" = "%d ay";
+"invitation_share_message" = "Seni lifebox’a davet ediyorum, kayıt ol 5GB saklama alanını kullanmaya başla. Sen de davet et, daha çok kazan!";
+"profile_recovery_email_is_same_with_account_email" = "Kurtarma e-postası ile profil e-postası aynı olamaz.";
+"forgotMyPassword_your_account_email" = "Hesabına ait e-posta veya telefon numarası";
+"forgotMyPassword_enter_your_account_email" = "Hesabına ait e-postanı veya telefon numaranı gir";
+"forgotMyPassword_instructions" = "Şifreni sıfırlamak için hesabına ait e-posta adresine veya telefon numarasına şifre sıfırlama linki göndereceğiz:";
+"forgotMyPassword_enter_valid_email" = "Lütfen geçerli bir e-posta veya telefon numarası gir";
+"forgotMyPassword_instructions_other" = "Hesabına ait e-posta adresine veya telefon numarana göndereceğimiz linke tıklayarak şifreni sıfırlayabilirsin.";
+"forgotMyPassword_reset_button" = "Şifre Sıfırla";
+"forgotMyPassword_challange1_header" = "Doğrulama Yöntemini Seçin";
+"forgotMyPassword_challange1_body" = "Şifre yenileme akışına aşağıdaki doğrulama yöntemlerinden hangisi ile devam etmek istersin?";
+"forgotMyPassword_phone_number" = "Telefon Numarası";
+"forgotMyPassword_mail" = "E-posta";
+"forgotMyPassword_recovery_mail" = "Kurtarma E-postası";
+"forgotMyPassword_security_question" = "Güvenlik Sorusu";
+"forgotMyPassword_continue" = "Devam Et";
+"forgotMyPassword_email_popup_message" = "Şifreni sıfırlaman için %@ e-posta adresine şifre sıfırlama linki gönderdik.";
+"forgotMyPassword_challange2_header" = "Doğrulama Yöntemini Seçin";
+"forgotMyPassword_challange2_body" = "Şifre yenileme akışına aşağıdaki doğrulama yöntemlerinden hangisi ile devam etmek istersin?";
+"masterpass_feature_package_cancel" = "Paketini iptal etmek için lütfen www.mylifebox.com'u ziyaret et";
