--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1876,4 +1876,23 @@
 "masterpass_quota_package_cancel" = "Щоб скасувати пакет, відвідайте www.mylifebox.com";
 "profile_recovery_email_empty" = "Електронна адреса для відновлення порожній";
 "profile_recovery_email_invalid" = "Резервний адреса електронної пошти недійсний";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d місяців";
+"invitation_share_message" = "Запрошую вас в lifebox, зареєструйтесь і почніть використовувати сховище 5 ГБ.";
+"profile_recovery_email_is_same_with_account_email" = "Резервний адреса електронної пошти та профілю не должні збігатися.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Щоб скасувати пакет, відвідайте www.mylifebox.com";
