--- a/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/fr.lproj/OurLocalizable.strings
@@ -2182,4 +2182,23 @@ Please check I have understood the intended command here*/
 "masterpass_quota_package_cancel" = "Pour annuler votre paquet, veuillez visiter www.mylifebox.com";
 "profile_recovery_email_empty" = "E-mail de récupération est vide";
 "profile_recovery_email_invalid" = "E-mail de récupération n'est pas valide";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d mois";
+"invitation_share_message" = "Je vous invite à lifebox, inscrivez-vous et commencez à utiliser 5 GB de stockage.";
+"profile_recovery_email_is_same_with_account_email" = "L'e-mail de récupération et l'e-mail de profil ne peuvent pas être identiques.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Pour annuler votre paquet, veuillez visiter www.mylifebox.com";
