--- a/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ro.lproj/OurLocalizable.strings
@@ -1874,4 +1874,23 @@
 "masterpass_quota_package_cancel" = "Pentru a-ţi anula pachetul, te rugăm să vizitezi www.mylifebox.com";
 "profile_recovery_email_empty" = "E-mailul de recuperare este gol";
 "profile_recovery_email_invalid" = "E-mailul de recuperare nu este valid";
-"package_period_x_months" = "";
+"package_period_x_months" = "%d luni";
+"invitation_share_message" = "Te invit la lifebox, înregistrează-te și începe să utilizezi spațiu de stocare de 5 GB.";
+"profile_recovery_email_is_same_with_account_email" = "E-mailul de recuperare și e-mailul de profil nu pot fi identice.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Pentru a-ţi anula pachetul, te rugăm să vizitezi www.mylifebox.com";
