--- a/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ar.lproj/OurLocalizable.strings
@@ -1878,11 +1878,31 @@
 "signup_password_rule_character_limit" = "الحد الأدنى 6 أحرف، الحد الأقصى 16 حرفا";
 "signup_password_rule_upper_lower_numeric" = "على الأقل حرف كبير 1 وحرف صغير 1 ورقم 1";
 "signup_password_rule_sequential_characters" = "أحرف غير متتالية";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "البريد الإلكتروني لاسترداد الحساب";
+"profile_recovery_mail_desc" = "يتم استخدام البريد الإلكتروني لاسترداد الحساب من أجل التحقق عند نسيان كلمة المرور الخاصة بك.";
+"profile_recovery_mail_hint" = "لم يتم إدخال أي بريد إلكتروني للاسترداد الحساب بعد";
+"profile_mail_verified" = "تم التحقق";
+"profile_verify" = "تحقق";
+"masterpass_quota_package_cancel" = "لإلغاء الباقة الخاصة بك، يرجى زيارة موقع\nwww.mylifebox.com";
+"profile_recovery_email_empty" = "البريد الإلكتروني لاسترداد الحساب فارغ";
+"profile_recovery_email_invalid" = "البريد الإلكتروني لاسترداد الحساب غير صالح";
+"package_period_x_months" = "%d أشهر";
+"invitation_share_message" = "أدعوك إلى لايف بوكسLifeebox ، قم بتسجيل اسمك وابدأ في استخدام مساحة تخزين 5 جيجا بايت. وكذلك قم بدعوة شخص آخر واكسب المزيد!";
+"profile_recovery_email_is_same_with_account_email" = "لا يمكن أن يكون البريد الإلكتروني للاسترداد والبريد الإلكتروني للملف الشخصي متماثلين.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "لإلغاء الباقة الخاصة بك، يرجى زيارة موقع\nwww.mylifebox.com";
