--- a/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/de.lproj/OurLocalizable.strings
@@ -1866,11 +1866,31 @@
 "signup_password_rule_character_limit" = "Mindestens 6, maximal 16 alphabetische Zeichen";
 "signup_password_rule_upper_lower_numeric" = "Mindestens 1 Großbuchstabe, 1 Kleinbuchstabe und 1 Zahl";
 "signup_password_rule_sequential_characters" = "nicht aufeinanderfolgende alphabetische Zeichen";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Wiederherstellungs-E-Mail";
+"profile_recovery_mail_desc" = "Die Wiederherstellungs-E-Mail wird verwendet, um Ihr Passwort zu verifizieren, wenn Sie es vergessen haben";
+"profile_recovery_mail_hint" = "Noch keine Wiederherstellungs-E-Mail eingegeben";
+"profile_mail_verified" = "Verifiziert";
+"profile_verify" = "Verifizieren";
+"masterpass_quota_package_cancel" = "Um Ihr Paket zu stornieren, besuchen Sie bitte www.mylifebox.com";
+"profile_recovery_email_empty" = "Wiederherstellungs-E-Mail ist leer";
+"profile_recovery_email_invalid" = "Wiederherstellungs-E-Mail ist ungültig";
+"package_period_x_months" = "%d monate";
+"invitation_share_message" = "Ich lade Sie zu lifebox ein, registrieren Sie sich und nutzen Sie den 5 GB Speicherplatz.";
+"profile_recovery_email_is_same_with_account_email" = "Die Wiederherstellungs-E-Mail und die Profil-E-Mail können nicht identisch sein.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Um Ihr Paket zu stornieren, besuchen Sie bitte www.mylifebox.com";
