--- a/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/en.lproj/OurLocalizable.strings
@@ -718,7 +718,6 @@
 "package_period_day" = "day";
 "package_period_week" = "week";
 "package_period_month" = "Month";
-"package_period_x_months" = "%d months";
 "package_period_year" = "year";
 "face_image_apple_price" = "%@/%@";
 "package_apple_price" = "%@ / %@";
@@ -1890,7 +1889,7 @@
 "settings_item_invitation" = "Invite Your Friends";
 "title_invitation_campaign" = "Campaign Details";
 "title_invitation_link" = "Your Invitation Link";
-"title_invitation_friends" = "Friends Signup With Invitation(%d people)";
+"title_invitation_friends" = "Friends Signed up With Invitation(%d people)";
 "title_invitation_packages" = "Gifts You Earned(%d Gifts)";
 "invitation_snackbar_copy" = "Your invitation link is copied successfully";
 "invitation_share" = "Share Link";
@@ -1925,3 +1924,23 @@
 "masterpass_quota_package_cancel" = "To cancel your package, please visit www.mylifebox.com";
 "profile_recovery_email_empty" = "Recovery e-mail is empty";
 "profile_recovery_email_invalid" = "Recovery e-mail field is invalid";
+"package_period_x_months" = "%d months";
+"invitation_share_message" = "You have been sent 5GB of lifebox storage, click to redeem";
+"profile_recovery_email_is_same_with_account_email" = "Recovery e-mail and profile e-mail can't be the same.";
+"forgotMyPassword_your_account_email" = "Your e-mail or phone number associated with your account";
+"forgotMyPassword_enter_your_account_email" = "Enter your e-mail or phone number associated with your account";
+"forgotMyPassword_instructions" = "To reset your password we will send a link to your e-mail associated with your account:";
+"forgotMyPassword_enter_valid_email" = "Please enter a valid email or phone number";
+"forgotMyPassword_instructions_other" = "To reset your password you can click the link that will be sent to your e-mail associated with your account.";
+"forgotMyPassword_reset_button" = "Reset Password";
+"forgotMyPassword_challange1_header" = "Please Select a Verification Method";
+"forgotMyPassword_challange1_body" = "To reset your password, which verification method would you like to continue with?";
+"forgotMyPassword_phone_number" = "Phone Number";
+"forgotMyPassword_mail" = "E-mail";
+"forgotMyPassword_recovery_mail" = "Recovery E-mail";
+"forgotMyPassword_security_question" = "Security Question";
+"forgotMyPassword_continue" = "Continue";
+"forgotMyPassword_email_popup_message" = "We have sent a link to your %@ e-mail to reset your password.";
+"forgotMyPassword_challange2_header" = "Please Select a Verification Method";
+"forgotMyPassword_challange2_body" = "To reset your password, which verification method would you like to continue with?";
+"masterpass_feature_package_cancel" = "To cancel your package, please visit www.mylifebox.com";
