--- a/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/es.lproj/OurLocalizable.strings
@@ -1908,11 +1908,31 @@
 "signup_password_rule_character_limit" = "Mínimo 6, máximo 16 caracteres";
 "signup_password_rule_upper_lower_numeric" = "Al menos 1 letra mayúscula, 1 letra minúscula y 1 número";
 "signup_password_rule_sequential_characters" = "caracteres no consecutivos";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Correo electrónico de recuperación";
+"profile_recovery_mail_desc" = "El correo electrónico de recuperación se usa para verificar cuándo olvidas tu contraseña";
+"profile_recovery_mail_hint" = "Aún no ingresaste una dirección de correo electrónico alternativa";
+"profile_mail_verified" = "Verificado";
+"profile_verify" = "Verificar";
+"masterpass_quota_package_cancel" = "Para cancelar su paquete, visite www.mylifebox.com";
+"profile_recovery_email_empty" = "El correo electrónico de recuperación está vacío";
+"profile_recovery_email_invalid" = "El correo de recuperación no es válido";
+"package_period_x_months" = "%d meses";
+"invitation_share_message" = "Te invito a lifebox, regístrate y comienza a usar 5GB de almacenamiento.";
+"profile_recovery_email_is_same_with_account_email" = "El correo electrónico de recuperación y el correo electrónico del perfil no pueden ser iguales.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Para cancelar su paquete, visite www.mylifebox.com";
