--- a/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/ru.lproj/OurLocalizable.strings
@@ -1880,11 +1880,31 @@
 "signup_password_rule_character_limit" = "Минимум 6, максимум 16 символов";
 "signup_password_rule_upper_lower_numeric" = "Минимум 1 заглавная буква, 1 строчная буква и 1 цифра";
 "signup_password_rule_sequential_characters" = "Непоследовательные символы";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Резервный адрес Электронной почты";
+"profile_recovery_mail_desc" = "Резервный адрес электронной почты используется для подтверждения, если вы забудете свой пароль";
+"profile_recovery_mail_hint" = "Резервный адрес электронной почты еще не введен";
+"profile_mail_verified" = "Подтверждено";
+"profile_verify" = "Подтвердить";
+"masterpass_quota_package_cancel" = "Чтобы отменить пакет, посетите сайт www.mylifebox.com";
+"profile_recovery_email_empty" = "Резервный адрес электронной почты пуст";
+"profile_recovery_email_invalid" = "Резервный адрес электронной почты недействителен";
+"package_period_x_months" = "%d месяц";
+"invitation_share_message" = "Приглашаю тебя в lifebox, зарегистрируйся и начни использовать хранилище в 5 ГБ.";
+"profile_recovery_email_is_same_with_account_email" = "Резервный адрес электронной почты и адрес электронной почты профиля не могут совпадать.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Чтобы отменить пакет, посетите сайт www.mylifebox.com";
