--- a/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
+++ b/Depo/Depo/App/Resources/uk.lproj/OurLocalizable.strings
@@ -1868,11 +1868,31 @@
 "signup_password_rule_character_limit" = "Мінімум 6, максимум 16 символів";
 "signup_password_rule_upper_lower_numeric" = "Мінімум 1 прописна буква, 1 мала літера і 1 цифра";
 "signup_password_rule_sequential_characters" = "Непослідовні символи";
-"profile_recovery_mail" = "";
-"profile_recovery_mail_desc" = "";
-"profile_recovery_mail_hint" = "";
-"profile_mail_verified" = "";
-"profile_verify" = "";
-"masterpass_quota_package_cancel" = "";
-"profile_recovery_email_empty" = "";
-"profile_recovery_email_invalid" = "";
+"profile_recovery_mail" = "Резервна електронна пошта";
+"profile_recovery_mail_desc" = "Резервний адреса електронної пошти використовується для підтвердження, якщо ви забули свій пароль.";
+"profile_recovery_mail_hint" = "Резервний адреса електронної пошти ще не введений";
+"profile_mail_verified" = "Підтверджено";
+"profile_verify" = "Підтвердь";
+"masterpass_quota_package_cancel" = "Щоб скасувати пакет, відвідайте www.mylifebox.com";
+"profile_recovery_email_empty" = "Електронна адреса для відновлення порожній";
+"profile_recovery_email_invalid" = "Резервний адреса електронної пошти недійсний";
+"package_period_x_months" = "%d місяців";
+"invitation_share_message" = "Запрошую вас в lifebox, зареєструйтесь і почніть використовувати сховище 5 ГБ.";
+"profile_recovery_email_is_same_with_account_email" = "Резервний адреса електронної пошти та профілю не должні збігатися.";
+"forgotMyPassword_your_account_email" = "";
+"forgotMyPassword_enter_your_account_email" = "";
+"forgotMyPassword_instructions" = "";
+"forgotMyPassword_enter_valid_email" = "";
+"forgotMyPassword_instructions_other" = "";
+"forgotMyPassword_reset_button" = "";
+"forgotMyPassword_challange1_header" = "";
+"forgotMyPassword_challange1_body" = "";
+"forgotMyPassword_phone_number" = "";
+"forgotMyPassword_mail" = "";
+"forgotMyPassword_recovery_mail" = "";
+"forgotMyPassword_security_question" = "";
+"forgotMyPassword_continue" = "";
+"forgotMyPassword_email_popup_message" = "";
+"forgotMyPassword_challange2_header" = "";
+"forgotMyPassword_challange2_body" = "";
+"masterpass_feature_package_cancel" = "Щоб скасувати пакет, відвідайте www.mylifebox.com";
